--------------------
Bazaar Release Notes
--------------------

.. contents::

  API BREAKS:

    * ``Branch.abspath`` is deprecated; use the Tree or Transport 
      instead.
      (Martin Pool)

    * ``LockableFiles.put_utf8``, ``put_bytes`` and ``controlfilename``
      are now deprecated in favor of using Transport operations.
      (Martin Pool)


IN DEVELOPMENT
--------------

  NOTES WHEN UPGRADING:

  CHANGES:

    * Broader support of GNU Emacs mail clients. Set
      ``mail_client=emacsclient`` in your bazaar.conf and ``send`` will pop the
      bundle in a mail buffer according to the value of ``mail-user-agent``
      variable. (Xavier Maillard)

  FEATURES:

  IMPROVEMENTS:

    * Diff now handles revision specs like "branch:" and "submit:" more
      efficiently.  (Aaron Bentley)

    * More friendly error given when attempt to start the smart server
      on an address already in use. (Andrea Corbellini, #200575)

    * Pull completes much faster when there is nothing to pull.
      (Aaron Bentley)

  BUGFIXES:

    * Avoid muttering every time a child update does not cause a progress bar
      update. (John Arbash Meinel, #213771)

    * ``Branch.reconcile()`` is now implemented. This allows ``bzr reconcile``
      to fix when a Branch has a non-canonical mainline history. ``bzr check``
      also detects this condition. (John Arbash Meinel, #177855)

    * ``bzr commit`` now works with Microsoft's FTP service.
      (Andreas Deininger)

    * Conversion from non-rich-root to rich-root(-pack) updates inventory
      sha1s, even when bundles are used.  (Aaron Bentley, #181391)

    * Conversion from non-rich-root to rich-root(-pack) works correctly even
      though search keys are not topologically sorted.  (Aaron Bentley)

    * Conversion from non-rich-root to rich-root(-pack) works even when a
      parent revision has a different root id.  (Aaron Bentley, #177874)

    * Fetching all revisions from a repository does not cause pack collisions.