@@ -63,7 +63,7 @@ class AllInOneRepository(Repository):
             # some existing branches where there's a mixture; we probably 
             # still want the option to look for both.
             relpath = a_bzrdir._control_files._escape(name)
-            store = TextStore(a_bzrdir._control_files._transport.clone(relpath),
+            store = TextStore(a_bzrdir.transport.clone(relpath),
                               prefixed=prefixed, compressed=compressed,
                               dir_mode=dir_mode,
                               file_mode=file_mode)
@@ -76,7 +76,8 @@ class AllInOneRepository(Repository):
             # which allows access to this old info.
             self.inventory_store = get_store('inventory-store')
             text_store = get_store('text-store')
-        super(AllInOneRepository, self).__init__(_format, a_bzrdir, a_bzrdir._control_files, _revision_store, control_store, text_store)
+        super(AllInOneRepository, self).__init__(_format,
+            a_bzrdir, a_bzrdir._control_files, _revision_store, control_store, text_store)
         if control_store is not None:
             control_store.get_scope = self.get_transaction
         text_store.get_scope = self.get_transaction
@@ -368,7 +369,7 @@ class PreSplitOutRepositoryFormat(RepositoryFormat):
             'branch-lock', lockable_files.TransportLock)
         control_files.create_lock()
         control_files.lock_write()
-        transport = control_files._transport
+        transport = a_bzrdir.transport
         try:
             transport.mkdir_multi(['revision-store', 'weaves'],
                 mode=control_files._dir_mode)
